--- a/css/ppf-systems.css
+++ b/css/ppf-systems.css
@@ -903,7 +903,7 @@
   position: fixed;
   bottom: 100px;
   right: 20px;
-  z-index: 1000;
+  z-index: 9991;
   display: flex;
   flex-direction: row;
   align-items: center;
